--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+.content {
+	height: 100%; 
+}
 ul {
 	/*Remove the bullets from all unordered lists on the page*/
 	list-style: none;
@@ -5,6 +8,8 @@ ul {
 
 .header {
 	float: right;
+	/* forcing this to stay at the top and hopefully not disapear */
+	top: 2px;
 }
 /* Styling for the top navbar list items*/
 .header li {
@@ -18,7 +23,7 @@ ul {
 	/* horizontally center everything..hopefully */
 	text-align: center;
 	position: relative;
-	padding-top: 20px;
+	padding-top: 200px;
 	padding-bottom: 20px;
 }
 
@@ -26,6 +31,7 @@ ul {
 #google_logo {
 	height: 92px;
 	width: 272px;
+	padding-bottom: 25px;
 }
 
 /*lets try to draw a pretty box */
@@ -35,6 +41,43 @@ ul {
 	width: 638px;
 	/* these boxes tend to want to go left.  Margin auto makes it center*/
 	margin: auto;
+	border-color: rgb(217, 217, 217);
+}
+#sch_qry {
+	height: 26px;
+	line-height: 26px;
+	float: left;
+	border: none;
+	padding: 4px;
+	outline: none;
+	font-size: 16px;
+	width: 90%
+
+}
+#mic {
+	width: 24px;
+	height: 24px; 
+	display: block;
+	float: right;
+	padding: 4px 4px;
+}
+.button {
+	margin-top: 25px;
+	height: 36px;
+	line-height: 27px;
+}
+#g_sch {
+	height: 36px;
+}
+/* Styling for the entire footer */
+.footer {
+	/* force the footer to the bottom of the page*/
+	position: absolute;
+	bottom: 2px;
+	/* define the width of the footer as the entire width of the screen*/
+	width: 100%;
+	background-color: #f2f2f2;
+	height: 40px;
 }
 
 /* styling for all of the footer list items*/
@@ -42,7 +85,9 @@ ul {
 	/* make all of the list items show up in a single line*/
 	display: inline-block;
 	/*give everything some room */
-	padding: 2px;
+	padding: 2px 5px;
+	/* This makes the list items center inside the containing div */
+	line-height: 40px;
 }
 /* styling for the left side of the footer*/
 .l_footer {
